# aphorme_launcher

./: CHANGELOG.md  Cargo.nix  Cargo.toml  README.md  default.nix  flake.nix  perf.json  shell.nix  test.txt
src/: apps.rs  config.rs  egui_ui.rs  iced_ui.rs  main.rs
