[package]
name = "aphorme"
version = "0.1.10"
edition = "2021"
description = "A program launcher for X11 and Wayland"
license = "GPL-3.0"
keywords = ["program-launcher", "linux-utility"]
repository = "https://github.com/Iaphetes/aphorme_launcher"
homepage = "https://github.com/Iaphetes/aphorme_launcher"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version = "0.21", optional = true}
egui_extras = {version = "0.21.0", features = ["image", "svg"], optional = true}
freedesktop_entry_parser = "1.3.0"
fuzzy-matcher = "0.3"
linicon = "2.3.0"
linicon-theme = "1.2"
image = { version = "0.24", features = ["jpeg", "png"] }
serde = { version = "1.0", features = ["derive"] }
confy = "0.5"
dirs = "5"
single-instance = "0.3"
iced = {version = "0.9", optional = true}
once_cell = "1.16.0"

[features]
default = ["egui-ui"]
egui-ui= ["dep:eframe", "dep:egui_extras"]
iced-ui = ["dep:iced"]